ProjetCompil/Gencode/Test/success/src/matrix.cas
program
	T: array[1..10] of array[1..10] of integer;
	i,j: integer;
begin
	for i:=1 to 10 do
		write("[");
		for j:=1 to 10 do
			write(T[i][j]);
			write(" ");
		end;
		write("]");
		new_line;
	end;
end.
